<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sticky Float</string>
    <string name="action_settings">Settings</string>
    <string name="toast_message_main_activity">Sticky float should be started from another applications share-menu (Like Google Keep)</string>
	<string name="string_extra">STRING_EXTRA</string>
	<string name="wake_lock_label">FloatReminderWakeLock</string>
	<string name="settings_theme_summary">Chose the theme of the notes</string>
	<string name="settings_theme_title">Theme</string>
	<string name="settings_theme_list_key">SETTINGS_THEME_LIST_KEY</string>
	<string name="settings_text_size_title">Text size</string>
	<string name="settings_text_size_list_key">TEXT_SIZE_LIST_KEY</string>
	<string name="settings_text_size_summary">Set the text size of the notes</string>
	<string name="settings_add_note_title">Note</string>
		<string name="settings_add_note_text">note</string>
	<string name="settings_appearance_title">Appearance</string>
	<string name="settings_add_note_key">ADD_NOTE_KEY</string>
	<string name="settings_add_note_summary">Add a note</string>

</resources>